--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
             android:name=".LocationService"
             android:enabled="true"
             android:exported="true"></service>
+
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
