Workplaces overview (just an outline) without database queries

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".DashboardActivity">
-        </activity>
-
+        <activity android:name=".DashboardActivity" />
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -37,9 +35,15 @@
 
         <activity
             android:name=".RegisterActivity"
-            android:label="@string/register_activity"
-            />
-
+            android:label="@string/register_activity" />
+        <activity android:name=".Overview">
+        </activity>
+        <activity
+            android:name=".Workplace_Details"
+            android:label="Details" />
+        <activity android:name=".FragmentTab" />
+        <activity android:name=".Workplace_Details_Custom" />
+        <activity android:name=".Select_date_calendar"></activity>
     </application>
 
 </manifest>
