--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <receiver android:process=":remote"
-            android:name=".LocationChecker">
-        </receiver>
-
-        <service
-            android:name=".LocationService"
-            android:enabled="true"
-            android:exported="true">
-        </service>
-
+        <service android:name=".LocationService"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,5 +22,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
