--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,45 +16,61 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".DashboardActivity"
             android:label="test"
-            android:theme="@style/AppTheme.NoActionBar"
-            />
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Login">
-        </activity>
-
-        <service android:name=".services.LocationService" />
-        <service android:name=".BackgroundService"/>
-
-        <activity
-            android:name=".RegisterActivity"
-            android:label="@string/register_activity" />
-
-        <activity android:name=".Overview"></activity>
-            android:label="@string/register_activity" />
-        <activity
-            android:name=".Profile"
-            android:label="@string/app_name">
-
-        </activity>
-
-        <activity
-            android:name=".Workplace_Details"
-            android:label="Details" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".FragmentTab" />
-        <activity android:name=".Workplace_Details_Custom" />
-        <activity android:name=".Select_date_calendar"></activity>
+        <service
+            android:name=".services.LocationService">
+        </service>
+
+        <service
+            android:name=".BackgroundService">
+        </service>
+
+        <activity
+            android:name=".RegisterActivity"
+            android:label="@string/register_activity" >
+        </activity>
+
+        <activity
+            android:name=".Overview">
+        </activity>
+
+        <activity
+            android:name=".Profile"
+            android:label="@string/app_name">
+        </activity>
+
+        <activity
+            android:name=".Workplace_Details"
+            android:label="Details" >
+        </activity>
+
+        <activity
+            android:name=".FragmentTab">
+        </activity>
+
+        <activity
+            android:name=".Workplace_Details_Custom">
+        </activity>
+
+        <activity
+            android:name=".Select_date_calendar">
+        </activity>
 
         <activity
             android:name=".navigation_activity"
