Added Workplaces Activity with working navigation integration

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,66 +16,47 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".DashboardActivity"
             android:label="test"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.Login">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/AppTheme.Login"></activity>
 
-        <service
-            android:name=".services.LocationService">
-        </service>
-
-        <service
-            android:name=".BackgroundService">
-        </service>
+        <service android:name=".services.LocationService"></service>
+        <service android:name=".BackgroundService"></service>
 
         <activity
             android:name=".RegisterActivity"
-            android:label="@string/register_activity" >
-        </activity>
-
-        <activity
-            android:name=".Overview">
+            android:label="@string/register_activity"></activity>
+        <activity android:name=".Overview">
         </activity>
 
         <activity
             android:name=".Profile"
-            android:label="@string/app_name">
-        </activity>
-
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".Workplace_Details"
-            android:label="Details" >
-        </activity>
-
-        <activity
-            android:name=".FragmentTab">
-        </activity>
-
-        <activity
-            android:name=".Workplace_Details_Custom">
-        </activity>
-
-        <activity
-            android:name=".Select_date_calendar">
-        </activity>
-
+            android:label="Details"></activity>
+        <activity android:name=".FragmentTab"></activity>
+        <activity android:name=".Workplace_Details_Custom"></activity>
+        <activity android:name=".Select_date_calendar"></activity>
         <activity
             android:name=".navigation_activity"
             android:label="@string/title_activity_navigation_activity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".Workplace"
+            android:label="@string/title_activity_workplace"
             android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
