backgroundservice was wrong in manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         </service>
 
         <service
-            android:name=".BackgroundService">
+            android:name=".services.BackgroundService">
         </service>
 
         <activity
