--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,35 +19,35 @@
         <activity
             android:name=".DashboardActivity"
             android:label="test"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
 
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.Login"></activity>
+            android:theme="@style/AppTheme.Login">
+        </activity>
 
-        <service android:name=".services.LocationService"></service>
-        <service android:name=".BackgroundService"></service>
+        <service android:name=".services.LocationService" />
+        <service android:name=".BackgroundService" />
 
         <activity
             android:name=".RegisterActivity"
-            android:label="@string/register_activity"></activity>
-        <activity android:name=".Overview">
+            android:label="@string/register_activity" />
+        <activity
+            android:name=".Overview">
         </activity>
 
         <activity
-            android:name=".Profile"
-            android:label="@string/app_name"></activity>
-        <activity
             android:name=".Workplace_Details"
-            android:label="Details"></activity>
-        <activity android:name=".FragmentTab"></activity>
-        <activity android:name=".Workplace_Details_Custom"></activity>
-        <activity android:name=".Select_date_calendar"></activity>
+            android:label="Details" />
+        <activity android:name=".FragmentTab" />
+        <activity android:name=".Workplace_Details_Custom" />
+        <activity android:name=".Select_date_calendar" />
         <activity
             android:name=".navigation_activity"
             android:label="@string/title_activity_navigation_activity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Workplace"
             android:label="@string/title_activity_workplace"
@@ -57,6 +57,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ProfileActivity"
+            android:label="Profile"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
