--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- Needed only if your app targets Android 5.0 (API level 21) or higher. -->
@@ -42,8 +43,8 @@ AIzaSyC8wIgesjm6Y7AcDv2_bDoKt6Km_L-neYk
             </intent-filter>
         </activity>
 
-        <service android:name=".services.LocationService"/>
-        <service android:name=".services.BackgroundService"/>
+        <service android:name=".services.LocationService" />
+        <service android:name=".services.BackgroundService" />
 
         <activity
             android:name=".RegisterActivity"
